--- a/notes/inputs/macros.sty
+++ b/notes/inputs/macros.sty
@@ -42,6 +42,8 @@
 \newcommand{\SDwedge}{\ensuremath{\mbox{SD}_\wedge}}
 \newcommand{\<}{\ensuremath{\langle}}
 \renewcommand{\>}{\ensuremath{\rangle}}
+\renewcommand{\leq}{\ensuremath{\leqslant}}
+\renewcommand{\geq}{\ensuremath{\geqslant}}
 \newcommand{\bR}{\ensuremath{\mathbf{R}}}
 \newcommand{\bn}{\ensuremath{\mathbf{n}}}
 \newcommand{\sansA}{\ensuremath{\mathsf{A}}}
